Rocket.Chat/rocket/Namespaces.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: rocketchat-server
  labels:
    name: rocketchat-server
