Rocket.Chat/rocket/Services.yaml
kind: Service
apiVersion: v1
metadata:
  name: rocketchat-server-service
  namespace: rocketchat-server

spec:
  selector:
    app: rocketchat-server
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: LoadBalancer
